--- a/sass/contacts/contacts.scss
+++ b/sass/contacts/contacts.scss
@@ -185,30 +185,43 @@ textarea:focus {
 }
 
 .contacts__form-formfield_label,
-.contacts__form-text_label{
-   transition: transform 100ms linear, font-size 100ms linear;
+.contacts__form-text_label {
+  transition: transform 100ms linear, font-size 100ms linear;
 }
 
 .contacts__form-formfield_input:focus + .contacts__form-formfield_label,
 .contacts__form-text_input:focus + .contacts__form-text_label {
-   transform: translateY(-100%);
-   font-size: 13px;
+  transform: translateY(-100%);
+  font-size: 13px;
 }
+
+.smile-svg{
+   position: absolute;
+   top: 25%;
+   right: 0;
+
+  
+}
+.contacts__form-formfield_input:focus + .smile-svg{
+   stroke: red;
+}
+
 
 .contacts__form-formfield_label {
   position: absolute;
   top: 25%;
 }
 
-.contacts__form-text_label{
-   position: absolute;
-   top: 0;
+.contacts__form-text_label {
+  position: absolute;
+  top: 0;
 }
+
+
 
 .contacts__form-formfield > textarea {
   height: 100%;
 }
-
 
 .contacts__form-message {
   height: 100px;
@@ -242,67 +255,33 @@ textarea:focus {
 
 //  checkbox
 
-.styled-checkbox 
-   {position: absolute; // take it out of document flow
-   opacity: 0; }// hide it
- 
-   .styled-checkbox + label {
-     position: relative;
-     cursor: pointer;
-     padding: 0;
-   }
- 
-   // Box.
-   .styled-checkbox + label:before {
-     content: '';
-     margin-right: 10px;
-     display: inline-block;
-     vertical-align: text-top;
-     width: 30px;
-     height: 30px;
-     background: inherit;
-   }
- 
-   // Box hover
-   .styled-checkbox:hover + label:before {
-     box-shadow: 0 0 0 3px rgba(0, 0, 0, 0.12);
-   }
+.styled-checkbox {
+  position: absolute;
+  opacity: 0;
+}
 
- 
-   // Box checked
-   .styled-checkbox:checked + label:before {
-     background: #007B25;
-   }
-   
-   // Disabled state label.
-   .styled-checkbox:disabled + label {
-     color: #b8b8b8;
-     cursor: auto;
-   }
- 
-   // Disabled box.
-   .styled-checkbox:disabled + label:before {
-     box-shadow: none;
-     background: #ddd;
-   }
- 
-   // Checkmark. Could be replaced with an image
-   .styled-checkbox:checked + label:after {
-     content: '';
-     position: absolute;
-     left: 5px;
-     top: 9px;
-     background: white;
-     width: 2px;
-     height: 2px;
-     box-shadow: 
-       2px 0 0 white,
-       4px 0 0 white,
-       4px -2px 0 white,
-       4px -4px 0 white,
-       4px -6px 0 white,
-       4px -8px 0 white;
-     transform: rotate(45deg);
-   }
- 
- 
+.styled-checkbox + label {
+  position: relative;
+  cursor: pointer;
+  padding: 0;
+}
+
+// Box.
+.styled-checkbox + label:before {
+  content: "";
+  margin-right: 10px;
+  display: inline-block;
+  vertical-align: text-top;
+  width: 30px;
+  height: 30px;
+  background: inherit;
+}
+
+.styled-checkbox:checked + label:before {
+  content: "";
+  background-image: url(../../svg/checked.svg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
