--- a/css/main.css
+++ b/css/main.css
@@ -1172,6 +1172,15 @@ textarea {
   transition: border-bottom 100ms linear;
 }
 
+.contacts__form-label_mail {
+  width: 100%;
+}
+
+.smile-svg {
+  position: absolute;
+  right: 0;
+}
+
 .contacts__form-formfield > input:hover,
 textarea:hover {
   border-bottom: 1px solid rgb(0, 123, 37);
@@ -1194,14 +1203,12 @@ textarea:focus {
   font-size: 13px;
 }
 
-.smile-svg {
-  position: absolute;
-  top: 25%;
-  right: 0;
-}
-
-.contacts__form-formfield_input:focus + .smile-svg {
-  stroke: red;
+.styled-checkbox:checked + label:before {
+  content: "";
+  background-image: url(../../svg/checked.svg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .contacts__form-formfield_label {
