--- a/css/projectsCard.css
+++ b/css/projectsCard.css
@@ -114,6 +114,54 @@
     text-align: center;
   }
 }
+.line-container {
+  margin-top: 30vh;
+  display: flex;
+  width: 100%;
+  padding-bottom: 100px;
+}
+.line-container .progress-line {
+  position: relative;
+  margin: 0 auto;
+  border-radius: 10px;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  height: 2px;
+  z-index: -1;
+  display: flex;
+  justify-content: space-around;
+}
+.line-container .progress-line .progress {
+  position: absolute;
+  width: 75%;
+  height: 100%;
+  transition: width 1s ease-in-out;
+}
+.line-container .status {
+  position: relative;
+  top: -9.5px;
+}
+.line-container .status .dot {
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  border: 2px solid #000;
+  background-color: #faeee5;
+}
+.line-container .status .dot.current {
+  background: #000;
+  border: 2px solid #000;
+}
+.line-container .status .dot.completed {
+  position: relative;
+  background: #000;
+  border: 5px solid #000;
+}
+
+.progress-text {
+  display: flex;
+}
+
 .description {
   position: relative;
   padding-bottom: 80px;
