--- a/sass/projectsPage/projectsCard.scss
+++ b/sass/projectsPage/projectsCard.scss
@@ -140,6 +140,68 @@
     }
 }
 
+// progress
+
+.line-container { 
+  margin-top: 30vh;
+  display: flex;
+	width: 100%;
+  padding-bottom: 100px;
+  
+    .progress-line {
+        position: relative;
+        margin: 0 auto;
+        border-radius: 10px;
+        width: 100%;
+        background: rgba(0, 0, 0, 0.5);
+        height: 2px;
+        z-index: -1;
+        display: flex;
+        justify-content: space-around;
+
+         .progress {
+            position: absolute;
+						width: 75%;
+						height: 100%;
+						// background: orange;
+						transition: width 1s ease-in-out;
+				}
+    }
+    
+    .status {
+					position: relative;
+          top: -9.5px;
+
+           .dot {
+              width: 15px;
+              height: 15px;
+              border-radius: 50%;
+							border: 2px solid #000;
+              background-color: #faeee5;;
+
+						&.current {
+							background: #000;
+							border: 2px solid #000;
+						}
+            
+            &.completed {
+              position: relative;
+              background: #000;
+              border: 5px solid #000;
+            }
+
+					}
+          
+    }
+   
+}
+
+.progress-text{
+  display: flex;
+}
+
+// description
+
 .description {
   position: relative;
   padding-bottom: 80px;
