--- a/sass/projectsPage/projectsCard.scss
+++ b/sass/projectsPage/projectsCard.scss
@@ -4,40 +4,17 @@
   width: 100%;
 }
 
-@media screen and (max-width: 767px) {
-  .options-conteiner {
-    padding-top: 0;
-  }
-}
-
 .carousel {
   padding-top: 130px;
 }
 
-@media screen and (max-width: 767px) {
-  .project__card-title {
-    font-size: 40px;
-    line-height: 0.95;
-  }
-}
 .options {
   margin-top: 23px;
-}
-@media screen and (min-width: 768px) {
-  .options {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(4, 1fr);
-
-    margin-top: 23px;
-    row-gap: 20px;
-  }
 }
 
 .price {
   font-size: 24px;
 }
-
 
 .options-paragraph {
   margin-bottom: 46px;
@@ -46,15 +23,6 @@
   font-size: 32px;
 }
 
-@media screen and (max-width: 767px) {
-  .options-paragraph{
-    font-size: 24px;
-    line-height: 1.3;
-  }
-}
-
-
-
 .options-list {
   padding: 31px 25px;
 
@@ -62,143 +30,67 @@
   border-radius: 20px;
 }
 
-@media screen and (max-width: 767px) {
-    .price {
-      margin-bottom: 13px;
-  
-      font-size: 20px;
-      line-height: 1.36;
-    }
-  
-    .options-paragraph {
-      margin-bottom: 0;
-      padding-bottom: 176px;
-    }
-
-    .options-list{
-        margin-top: -35%;
-    }
-  }
-
-@media screen and (min-width: 768px) {
-  .options-list {
-    display: grid;
-
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-
-    grid-area: 3/1/3/3;
-
-    column-gap: 60px;
-    row-gap: 60px;
-
-    padding: 26px 29px;
-    
-    
-
-    position: absolute;
-    width: 100%;
-    top: -11%;
-    right: -2%;
-  }
-}
-
 .table-items {
   align-self: center;
 }
 
-@media screen and (max-width: 767px) {
-    .table-items {
-        display: flex;
-    }
-
-    .table-items:not(:last-child){
-        margin-bottom: 36px;
-    }
-
-    .options-category{
-        margin-left: 19px;
-        width: 200px;
-    }
-
-    .options-title{
-        font-size: 14px;
-        line-height: 1.05;
-    }
-
-    .options-text{
-        margin-top: 8px;
-        font-size: 20px;
-        line-height: 1.12;
-    }
-
-    .options-svg{
-        width: 80px;
-        height: 80px;
-
-        text-align: center;
-    }
-}
-
 // progress
 
-.line-container { 
-  margin-top: 30vh;
-  display: flex;
-	width: 100%;
-  padding-bottom: 100px;
-  
-    .progress-line {
-        position: relative;
-        margin: 0 auto;
-        border-radius: 10px;
-        width: 100%;
-        background: rgba(0, 0, 0, 0.5);
-        height: 2px;
-        z-index: -1;
-        display: flex;
-        justify-content: space-around;
+// .line-container {
+//   margin-top: 30vh;
+//   display: flex;
+//   width: 100%;
+//   padding-bottom: 100px;
 
-         .progress {
-            position: absolute;
-						width: 75%;
-						height: 100%;
-						// background: orange;
-						transition: width 1s ease-in-out;
-				}
-    }
-    
-    .status {
-					position: relative;
-          top: -9.5px;
+//   .progress-line {
+//     position: relative;
+//     margin: 0 auto;
+//     border-radius: 10px;
+//     width: 100%;
+//     background: rgba(0, 0, 0, 0.5);
+//     height: 2px;
+//     z-index: -1;
+//     display: flex;
+//     justify-content: space-around;
 
-           .dot {
-              width: 15px;
-              height: 15px;
-              border-radius: 50%;
-							border: 2px solid #000;
-              background-color: #faeee5;;
+//     .progress {
+//       position: absolute;
+//       width: 75%;
+//       height: 100%;
+//       // background: orange;
+//       transition: width 1s ease-in-out;
+//     }
+//   }
 
-						&.current {
-							background: #000;
-							border: 2px solid #000;
-						}
-            
-            &.completed {
-              position: relative;
-              background: #000;
-              border: 5px solid #000;
-            }
+//   .status {
+//     position: relative;
+//     top: -9.5px;
 
-					}
-          
-    }
-   
-}
+//     .dot {
+//       width: 15px;
+//       height: 15px;
+//       border-radius: 50%;
+//       border: 2px solid #000;
+//       background-color: #faeee5;
 
-.progress-text{
-  display: flex;
-}
+//       &.current {
+//         background: #000;
+//         border: 2px solid #000;
+//       }
+
+//       &.completed {
+//         position: relative;
+//         background: #000;
+//         border: 5px solid #000;
+//       }
+
+//     }
+//   }
+// }
+
+// .progress-text {
+//   display: flex;
+// }
 
 // description
 
@@ -207,23 +99,9 @@
   padding-bottom: 80px;
 }
 
-@media screen and (min-width: 768px) {
-    .description {
-
-        display: grid;
-      
-        grid-template-columns: repeat(2, 1fr);
-
-        padding-top: 150px;
-
-      }
-}
-
 .description-block {
   grid-area: 1/2/2/3;
 }
-
-
 
 .description-title {
   margin-bottom: 29px;
@@ -232,16 +110,12 @@
   font-weight: 900;
 }
 
-
-
 .description-text {
   margin-bottom: 29px;
 
   font-size: 20px;
   font-weight: 400;
 }
-
-
 
 .description-button {
   display: block;
@@ -274,28 +148,6 @@
   text-align: center;
 }
 
-@media screen and (max-width: 767px){
-  .description-block{
-    padding-top:53px;
-  }
-
-  .description-title {
-    margin-bottom: 14px;
-  
-    font-size: 32px;
-    font-weight: 900;
-    line-height: 1.05;
-  }
-
-  .description-text {
-    margin-bottom: 26px;
-  }
-
-  .project-contact {
-    display: none;
-  }
-}
-
 .contacts-title {
   margin-bottom: 29px;
   font-size: 36px;
@@ -313,3 +165,122 @@
   margin-bottom: 24px;
 }
 
+@media screen and (max-width: 767px) {
+  .options-conteiner {
+    padding-top: 0;
+  }
+  .project__card-title {
+    font-size: 40px;
+    line-height: 0.95;
+  }
+
+  .options-paragraph {
+    font-size: 24px;
+    line-height: 1.3;
+  }
+
+  .price {
+    margin-bottom: 13px;
+
+    font-size: 20px;
+    line-height: 1.36;
+  }
+
+  .options-paragraph {
+    margin-bottom: 0;
+    padding-bottom: 176px;
+  }
+
+  .options-list {
+    margin-top: -35%;
+  }
+
+  .table-items {
+    display: flex;
+  }
+
+  .table-items:not(:last-child) {
+    margin-bottom: 36px;
+  }
+
+  .options-category {
+    margin-left: 19px;
+    width: 200px;
+  }
+
+  .options-title {
+    font-size: 14px;
+    line-height: 1.05;
+  }
+
+  .options-text {
+    margin-top: 8px;
+    font-size: 20px;
+    line-height: 1.12;
+  }
+
+  .options-svg {
+    width: 80px;
+    height: 80px;
+
+    text-align: center;
+  }
+
+  .description-block {
+    padding-top: 53px;
+  }
+
+  .description-title {
+    margin-bottom: 14px;
+
+    font-size: 32px;
+    font-weight: 900;
+    line-height: 1.05;
+  }
+
+  .description-text {
+    margin-bottom: 26px;
+  }
+
+  .project-contact {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .options {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+
+    margin-top: 23px;
+    row-gap: 20px;
+  }
+
+  .options-list {
+    display: grid;
+
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+
+    grid-area: 3/1/3/3;
+
+    column-gap: 60px;
+    row-gap: 60px;
+
+    padding: 26px 29px;
+
+    position: absolute;
+    width: 100%;
+    top: -11%;
+    right: -2%;
+  }
+
+  .description {
+    display: grid;
+
+    grid-template-columns: repeat(2, 1fr);
+
+    padding-top: 150px;
+  }
+}
