--- a/css/about.css
+++ b/css/about.css
@@ -44,6 +44,10 @@
   line-height: 1.05;
 }
 
+.about__benefits-header {
+  font-weight: 900;
+}
+
 .about__benefits-item svg {
   display: block;
   margin-bottom: 31px;
@@ -112,8 +116,11 @@
     line-height: 0.95;
   }
   .about__img {
-    width: 358px;
+    width: 100%;
     height: 273px;
+    -o-object-fit: cover;
+       object-fit: cover;
+    border-radius: 12px;
     background-image: url(../../img/about-apartment-mobile.png);
   }
   .about__title-conteiner {
@@ -153,5 +160,8 @@
   }
   .about_housing-item-desktop {
     display: none;
+  }
+  .partners__header {
+    margin: auto;
   }
 }/*# sourceMappingURL=about.css.map */
