--- a/css/base.css
+++ b/css/base.css
@@ -14,7 +14,7 @@ h1, h2, h3, h4, h5, h6, p {
 
 a {
   text-decoration: none;
-  color: black;
+  color: #000;
 }
 
 img {
@@ -30,4 +30,8 @@ ul {
 
 textarea {
   resize: none;
+}
+
+button {
+  color: #000;
 }/*# sourceMappingURL=base.css.map */
