--- a/css/carousel.css
+++ b/css/carousel.css
@@ -51,13 +51,17 @@
   line-height: 1.36;
 }
 
+.carousel-img {
+  width: 100%;
+  height: 589px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 12px;
+}
+
 @media screen and (max-width: 767px) {
   .carousel-img {
-    max-width: 356px;
     height: 273px;
-    -o-object-fit: cover;
-       object-fit: cover;
-    border-radius: 12px;
   }
   .arrow {
     display: none;
