--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,7 @@ h1, h2, h3, h4, h5, h6, p {
 
 a {
   text-decoration: none;
-  color: black;
+  color: #000;
 }
 
 img {
@@ -32,7 +32,11 @@ textarea {
   resize: none;
 }
 
-body {
+button {
+  color: #000;
+}
+
+.background {
   background-color: #faeee5;
 }
 
@@ -747,13 +751,17 @@ body {
   line-height: 1.36;
 }
 
+.carousel-img {
+  width: 100%;
+  height: 589px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 12px;
+}
+
 @media screen and (max-width: 767px) {
   .carousel-img {
-    max-width: 356px;
     height: 273px;
-    -o-object-fit: cover;
-       object-fit: cover;
-    border-radius: 12px;
   }
   .arrow {
     display: none;
@@ -1407,6 +1415,10 @@ textarea:focus {
   line-height: 1.05;
 }
 
+.about__benefits-header {
+  font-weight: 900;
+}
+
 .about__benefits-item svg {
   display: block;
   margin-bottom: 31px;
@@ -1475,8 +1487,11 @@ textarea:focus {
     line-height: 0.95;
   }
   .about__img {
-    width: 358px;
+    width: 100%;
     height: 273px;
+    -o-object-fit: cover;
+       object-fit: cover;
+    border-radius: 12px;
     background-image: url(../../img/about-apartment-mobile.png);
   }
   .about__title-conteiner {
@@ -1516,6 +1531,9 @@ textarea:focus {
   }
   .about_housing-item-desktop {
     display: none;
+  }
+  .partners__header {
+    margin: auto;
   }
 }
 .cookies {
