--- a/sass/about/about.scss
+++ b/sass/about/about.scss
@@ -47,6 +47,10 @@
   line-height: 1.05;
 }
 
+.about__benefits-header{
+  font-weight: 900;
+}
+
 .about__benefits-item svg {
   display: block;
   margin-bottom: 31px;
@@ -123,8 +127,10 @@
     line-height: 0.95;
   }
   .about__img {
-    width: 358px;
+    width: 100%;
     height: 273px;
+    object-fit: cover;
+    border-radius: 12px;
     background-image: url(../../img/about-apartment-mobile.png);
   }
 
@@ -174,5 +180,9 @@
 
   .about_housing-item-desktop {
     display: none;
+  }
+
+  .partners__header{
+    margin: auto;
   }
 }
