--- a/sass/base.scss
+++ b/sass/base.scss
@@ -14,7 +14,7 @@ h1, h2, h3, h4, h5, h6, p{
 
 a{
     text-decoration: none;
-    color: black;
+    color: #000;
 }
 
 img{
@@ -29,4 +29,8 @@ img{
 
 textarea{
     resize: none;
+  }
+
+  button{
+    color: #000;
   }
