--- a/sass/projectsPage/carousel.scss
+++ b/sass/projectsPage/carousel.scss
@@ -47,12 +47,15 @@
   line-height: 1.36;
 }
 
+.carousel-img{
+  width: 100%;
+  height: 589px;
+  object-fit: cover;
+  border-radius: 12px;
+}
 @media screen and (max-width: 767px) {
   .carousel-img {
-    max-width: 356px;
     height: 273px;
-    object-fit: cover;
-    border-radius: 12px;
   }
 
   .arrow {
