--- a/css/main.css
+++ b/css/main.css
@@ -1617,7 +1617,45 @@ textarea:focus {
   border: 2px solid rgba(0, 0, 0, 0.09);
 }
 
+.swiper-conteiner {
+  position: relative;
+}
+
 .swiper {
   width: 100%;
+  height: 630px;
+  border-radius: 12px;
+}
+
+.swiper-img {
+  width: 100%;
   height: 589px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 12px;
+}
+
+.swiper-button-prev::after,
+.swiper-button-next::after {
+  color: #007B25;
+}
+
+@media screen and (max-width: 767px) {
+  .swiper {
+    width: 100%;
+    height: 308px;
+  }
+  .swiper-img {
+    width: 100%;
+    height: 273px;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+  .swiper-button-prev,
+.swiper-button-next {
+    display: none;
+  }
+}
+.swiper-pagination {
+  text-align: end;
 }/*# sourceMappingURL=main.css.map */
