--- a/sass/swiper.scss
+++ b/sass/swiper.scss
@@ -1,4 +1,43 @@
+.swiper-conteiner{
+  position: relative;
+}
 .swiper {
     width: 100%;
-    height: 589px;
+    height: 630px;
+    border-radius: 12px;
   }
+
+  .swiper-img{
+    width: 100%;
+    height: 589px;
+    object-fit: cover;
+    border-radius: 12px;
+  }
+
+  .swiper-button-prev::after,
+  .swiper-button-next::after{
+    color: #007B25;
+}
+
+@media screen and (max-width: 767px) {
+  .swiper {
+    width: 100%;
+    height: 308px;
+  }
+
+  .swiper-img{
+    width: 100%;
+    height: 273px;
+    object-fit: cover;
+  }
+
+  .swiper-button-prev,
+  .swiper-button-next{
+    display: none;
+}
+}
+
+
+.swiper-pagination{
+  text-align: end;
+}
