--- a/css/main.css
+++ b/css/main.css
@@ -1640,6 +1640,23 @@ textarea:focus {
   color: #007B25;
 }
 
+#prev, #next {
+  width: 70px;
+  height: 70px;
+  background-color: #fff;
+  border-radius: 50%;
+  top: 45%;
+  z-index: 1;
+}
+
+#prev {
+  left: -35px;
+}
+
+#next {
+  right: -35px;
+}
+
 @media screen and (max-width: 767px) {
   .swiper {
     width: 100%;
@@ -1653,6 +1670,12 @@ textarea:focus {
   }
   .swiper-button-prev,
 .swiper-button-next {
+    display: none;
+  }
+  #prev {
+    display: none;
+  }
+  #next {
     display: none;
   }
 }
