--- a/sass/swiper.scss
+++ b/sass/swiper.scss
@@ -19,6 +19,24 @@
     color: #007B25;
 }
 
+#prev, #next {
+  width: 70px;
+  height: 70px;
+  background-color: #fff; 
+  border-radius: 50%; 
+  top: 45%; 
+  
+  z-index: 1;
+}
+
+#prev{
+  left: -35px; 
+}
+
+#next {
+  right: -35px; 
+}
+
 @media screen and (max-width: 767px) {
   .swiper {
     width: 100%;
@@ -35,9 +53,19 @@
   .swiper-button-next{
     display: none;
 }
+
+#prev{
+  display: none;
+}
+
+#next
+{
+  display: none;
+}
 }
 
 
 .swiper-pagination{
   text-align: end;
 }
+
