--- a/css/projectsCard.css
+++ b/css/projectsCard.css
@@ -29,7 +29,22 @@
 }
 
 .table-items {
+  display: flex;
   align-self: center;
+}
+.table-items .options-svg {
+  margin-right: 38px;
+}
+.table-items .options-title {
+  margin-bottom: 8px;
+}
+.table-items .options-category {
+  width: 200px;
+}
+.table-items .options-text {
+  margin-top: 8px;
+  font-size: 20px;
+  line-height: 1.12;
 }
 
 .description {
@@ -38,7 +53,7 @@
 }
 
 .description-block {
-  grid-area: 1/2/2/3;
+  grid-area: 2/2/2/3;
 }
 
 .description-title {
@@ -134,11 +149,6 @@
     font-size: 14px;
     line-height: 1.05;
   }
-  .options-text {
-    margin-top: 8px;
-    font-size: 20px;
-    line-height: 1.12;
-  }
   .options-svg {
     width: 80px;
     height: 80px;
@@ -172,19 +182,90 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 1fr);
-    grid-area: 3/1/3/3;
-    -moz-column-gap: 60px;
-         column-gap: 60px;
     row-gap: 60px;
-    padding: 26px 29px;
+    padding: 64px 57px;
     position: absolute;
-    width: 100%;
+    width: calc(100% - 80px);
     top: -11%;
-    right: -2%;
+    left: 40px;
   }
   .description {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    padding-top: 150px;
   }
+}
+.line-container {
+  position: relative;
+  grid-area: 1/1/1/3;
+  margin-top: 30vh;
+  display: flex;
+  width: 100%;
+  padding-bottom: 100px;
+}
+.line-container .progress-line {
+  position: relative;
+  margin: 0 auto;
+  width: 100%;
+  height: 1px;
+  border-bottom: 1px dashed rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: space-around;
+}
+.line-container .progress-line::after {
+  content: "";
+  position: absolute;
+  height: 1.5px;
+  width: 38%;
+  background: #000;
+  left: 0;
+}
+.line-container .status {
+  position: relative;
+  top: -9.5px;
+  z-index: 1;
+}
+.line-container .status .dot {
+  display: flex;
+  width: 18px;
+  height: 18px;
+  border-radius: 50%;
+  border: 2px solid #000;
+  background-color: #faeee5;
+}
+.line-container .status .dot .started {
+  display: block;
+  margin: auto;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background-color: #000;
+}
+.line-container .status .dot.current {
+  background: #000;
+}
+.line-container .status .dot.completed {
+  position: relative;
+  background: #000;
+}
+
+.progress__date-list {
+  position: absolute;
+  top: 25px;
+  left: 40px;
+  display: flex;
+  justify-content: space-around;
+  width: calc(100% - 80px);
+}
+.progress__date-list .progress__date-item {
+  text-align: center;
+}
+.progress__date-list .progress__date-item span:first-child {
+  margin-bottom: 4px;
+}
+.progress__date-list .progress__date-item span {
+  display: block;
+}
+
+.progress-text {
+  display: flex;
 }/*# sourceMappingURL=projectsCard.css.map */
