--- a/sass/projectsPage/projectsCard.scss
+++ b/sass/projectsPage/projectsCard.scss
@@ -31,66 +31,27 @@
 }
 
 .table-items {
+  display: flex;
   align-self: center;
+
+  .options-svg {
+    margin-right: 38px;
+  }
+
+  .options-title {
+    margin-bottom: 8px;
+  }
+
+  .options-category {
+    width: 200px;
+  }
+
+  .options-text {
+    margin-top: 8px;
+    font-size: 20px;
+    line-height: 1.12;
+  }
 }
-
-// progress
-
-// .line-container {
-//   margin-top: 30vh;
-//   display: flex;
-//   width: 100%;
-//   padding-bottom: 100px;
-
-//   .progress-line {
-//     position: relative;
-//     margin: 0 auto;
-//     border-radius: 10px;
-//     width: 100%;
-//     background: rgba(0, 0, 0, 0.5);
-//     height: 2px;
-//     z-index: -1;
-//     display: flex;
-//     justify-content: space-around;
-
-//     .progress {
-//       position: absolute;
-//       width: 75%;
-//       height: 100%;
-//       // background: orange;
-//       transition: width 1s ease-in-out;
-//     }
-//   }
-
-//   .status {
-//     position: relative;
-//     top: -9.5px;
-
-//     .dot {
-//       width: 15px;
-//       height: 15px;
-//       border-radius: 50%;
-//       border: 2px solid #000;
-//       background-color: #faeee5;
-
-//       &.current {
-//         background: #000;
-//         border: 2px solid #000;
-//       }
-
-//       &.completed {
-//         position: relative;
-//         background: #000;
-//         border: 5px solid #000;
-//       }
-
-//     }
-//   }
-// }
-
-// .progress-text {
-//   display: flex;
-// }
 
 // description
 
@@ -100,7 +61,7 @@
 }
 
 .description-block {
-  grid-area: 1/2/2/3;
+  grid-area: 2/2/2/3;
 }
 
 .description-title {
@@ -213,12 +174,6 @@
     line-height: 1.05;
   }
 
-  .options-text {
-    margin-top: 8px;
-    font-size: 20px;
-    line-height: 1.12;
-  }
-
   .options-svg {
     width: 80px;
     height: 80px;
@@ -263,24 +218,109 @@
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 1fr);
 
-    grid-area: 3/1/3/3;
+    // grid-area: 3/1/3/3;
 
-    column-gap: 60px;
+    // column-gap: 60px;
     row-gap: 60px;
 
-    padding: 26px 29px;
+    padding: 64px 57px;
 
     position: absolute;
-    width: 100%;
+    width: calc(100% - 80px);
     top: -11%;
-    right: -2%;
+    left: 40px;
   }
 
   .description {
     display: grid;
 
     grid-template-columns: repeat(2, 1fr);
-
-    padding-top: 150px;
   }
+}
+
+// progress
+
+.line-container {
+  position: relative;
+  grid-area: 1/1/1/3;
+  margin-top: 30vh;
+  display: flex;
+  width: 100%;
+  padding-bottom: 100px;
+
+  .progress-line {
+    position: relative;
+    margin: 0 auto;
+    width: 100%;
+    height: 1px;
+    border-bottom: 1px dashed rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: space-around;
+  }
+
+  .progress-line::after {
+    content: "";
+    position: absolute;
+    height: 1.5px;
+    width: 38%;
+    background: #000;
+
+    left: 0;
+  }
+
+  .status {
+    position: relative;
+    top: -9.5px;
+    z-index: 1;
+
+    .dot {
+      display: flex;
+      width: 18px;
+      height: 18px;
+      border-radius: 50%;
+      border: 2px solid #000;
+      background-color: #faeee5;
+
+      .started {
+        display: block;
+        margin: auto;
+        width: 10px;
+        height: 10px;
+        border-radius: 50%;
+        background-color: #000;
+      }
+
+      &.current {
+        background: #000;
+      }
+
+      &.completed {
+        position: relative;
+        background: #000;
+      }
+    }
+  }
+}
+
+.progress__date-list {
+  position: absolute;
+  top: 25px;
+  left: 40px;
+  display: flex;
+  justify-content: space-around;
+  width: calc(100% - 80px);
+
+  .progress__date-item {
+    text-align: center;
+    span:first-child {
+      margin-bottom: 4px;
+    }
+    span {
+      display: block;
+    }
+  }
+}
+
+.progress-text {
+  display: flex;
 }
