--- a/sass/projectsPage/projectsCard.scss
+++ b/sass/projectsPage/projectsCard.scss
@@ -17,14 +17,14 @@
 }
 
 .options-paragraph {
-  margin-bottom: 46px;
+  // margin-bottom: 46px;
   grid-area: 2/2/4/2;
 
   font-size: 32px;
 }
 
 .options-list {
-  padding: 31px 25px;
+  box-sizing: border-box;
 
   background-color: #fed6b8;
   border-radius: 20px;
@@ -154,6 +154,8 @@
 
   .options-list {
     margin-top: -35%;
+
+    padding: 31px 25px;
   }
 
   .table-items {
@@ -206,7 +208,7 @@
   .options {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(4, 1fr);
+    grid-template-rows: repeat(5, 1fr);
 
     margin-top: 23px;
     row-gap: 20px;
@@ -242,85 +244,194 @@
 
 .line-container {
   position: relative;
-  grid-area: 1/1/1/3;
-  margin-top: 30vh;
-  display: flex;
-  width: 100%;
-  padding-bottom: 100px;
+}
 
-  .progress-line {
-    position: relative;
-    margin: 0 auto;
-    width: 100%;
-    height: 1px;
-    border-bottom: 1px dashed rgba(0, 0, 0, 0.5);
+.status {
+  position: relative;
+  z-index: 1;
+
+  .dot {
     display: flex;
-    justify-content: space-around;
-  }
+    width: 18px;
+    height: 18px;
+    border-radius: 50%;
+    border: 2px solid #000;
+    background-color: #faeee5;
 
-  .progress-line::after {
-    content: "";
-    position: absolute;
-    height: 1.5px;
-    width: 38%;
-    background: #000;
-
-    left: 0;
-  }
-
-  .status {
-    position: relative;
-    top: -9.5px;
-    z-index: 1;
-
-    .dot {
-      display: flex;
-      width: 18px;
-      height: 18px;
+    .dot-finished {
+      display: block;
+      margin: auto;
+      width: 10px;
+      height: 10px;
       border-radius: 50%;
-      border: 2px solid #000;
-      background-color: #faeee5;
+      background-color: #000;
+    }
 
-      .started {
-        display: block;
-        margin: auto;
-        width: 10px;
-        height: 10px;
-        border-radius: 50%;
-        background-color: #000;
-      }
+    &.current {
+      background: #000;
+    }
 
-      &.current {
-        background: #000;
-      }
-
-      &.completed {
-        position: relative;
-        background: #000;
-      }
+    &.in-progress {
+      position: relative;
+      background: #000;
     }
   }
 }
 
 .progress__date-list {
   position: absolute;
-  top: 25px;
-  left: 40px;
   display: flex;
-  justify-content: space-around;
-  width: calc(100% - 80px);
+  font-size: 20px;
 
   .progress__date-item {
-    text-align: center;
+    width: 200px;
     span:first-child {
       margin-bottom: 4px;
+      font-size: 14px;
     }
     span {
       display: block;
     }
   }
 }
+@media screen and (max-width: 767px) {
+  .line-container {
+    margin-top: 53px;
+    padding-left: 65px;
 
-.progress-text {
-  display: flex;
+    .progress-line {
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+      width: 1px;
+      height: 400px;
+      border-left: 1px dashed rgba(0, 0, 0, 0.5);
+    }
+
+    // .progress-line::after {
+    //   content: "";
+    //   position: absolute;
+    //   width: 1.5px;
+    //   height: calc(100%/4/2 + 100%/4);;
+    //   background: #000;
+
+    //   top: 0;
+    //   left: 65px;
+    // }
+
+    .progress-line-active{
+      position: absolute;
+        width: 1.5px;
+        height: calc(100%/4/2 + 100%/4);
+        background: #000;
+        top: 0;
+        left: 65px;
+    }
+
+    .status {
+      left: -11px;
+    }
+  }
+
+  .progress__date-list {
+    top: 0;
+    left: 120px;
+    height: 400px;
+
+    flex-wrap: wrap;
+    align-items: center;
+    width: calc(100% - 80px);
+    font-size: 20px;
+
+    .progress__date-item {
+      width: 200px;
+      span:first-child {
+        margin-bottom: 4px;
+        font-size: 14px;
+      }
+      span {
+        display: block;
+      }
+    }
+  }
 }
+@media screen and (min-width: 768px) {
+  .line-container {
+    grid-area: 1/1/1/3;
+    margin-top: 240px;
+    display: flex;
+    width: 100%;
+    padding-bottom: 100px;
+
+    .progress-line {
+      position: relative;
+      margin: 0 auto;
+      width: 100%;
+      height: 1px;
+      border-bottom: 1px dashed rgba(0, 0, 0, 0.5);
+      display: flex;
+      justify-content: space-around;
+    }
+
+    .progress-line-active{
+      position: absolute;
+        height: 1.5px;
+        
+        background: #000;
+        left: 0;
+
+        &.length-1{
+          width: calc(100%/4/2);
+        }
+        &.length-2{
+          width: calc(100%/4/2 + 100%/4);
+        }
+        &.length-3{
+          width: calc(100%/4/2 + 100%/4*2);
+        }
+        &.length-4{
+          width: 100%
+        }
+    }
+    // .progress-line::after {
+    //   content: "";
+    //   position: absolute;
+    //   height: 1.5px;
+    //   width: calc(100%/4/2 + 100%/4);
+    //   background: #000;
+      
+    //   left: 0;
+    // }
+
+    .status {
+      top: -9.5px;
+    }
+  }
+  .progress__date-list {
+    top: 25px;
+    left: 40px;
+
+    justify-content: space-around;
+    width: calc(100% - 80px);
+
+    .progress__date-item {
+      text-align: center;
+      span:first-child {
+        margin-bottom: 4px;
+      }
+      span {
+        display: block;
+      }
+    }
+  }
+}
+
+
+
+
+// esli dot1 in progress / finished -> 
+            // width = 100%/4/2
+            // esli dot2 in progress / finished ->
+            // width = 100%/4/2 + 100%/4
+            // esli dot3 in progress / finished ->
+            // width = 100%/4/2 + 100%/4*2 -->
