--- a/css/projectsCard.css
+++ b/css/projectsCard.css
@@ -258,10 +258,21 @@
   .line-container .progress-line-active {
     position: absolute;
     width: 1.5px;
-    height: 37.5%;
     background: #000;
     top: 0;
     left: 65px;
+  }
+  .line-container .progress-line-active.length-1 {
+    height: 12.5%;
+  }
+  .line-container .progress-line-active.length-2 {
+    height: 37.5%;
+  }
+  .line-container .progress-line-active.length-3 {
+    height: 62.5%;
+  }
+  .line-container .progress-line-active.length-4 {
+    height: 100%;
   }
   .line-container .status {
     left: -11px;
@@ -272,7 +283,7 @@
     height: 400px;
     flex-wrap: wrap;
     align-items: center;
-    width: calc(100% - 80px);
+    width: calc(100% - 120px);
     font-size: 20px;
   }
   .progress__date-list .progress__date-item {
